js/js.translator/testData/incremental/invalidation/fakeOverrideInterfaceFunctionQualifiers/lib1/l1.0.kt
interface Module2Interface {
    public suspend fun testFunction2() = 2
}
